# PonchoProphet

./: .env.example  .gitignore  README.md  docker-compose.yml  present_ideas.md  todo.md
backend/: Dockerfile  conftest.py  pyproject.toml  requirements.txt  requirements_OLD_save.txt  schemas.py
backend/agents/: cache_agent.py  geocode_agent.py  llm_factory.py  outfit_agent.py  supervisor.py  weather_agent.py
backend/app/: config.py  main.py
backend/app/graph/: checkpointer.py
backend/graph/: graph.py  state.py
backend/tests/agents/: test_cache_agent.py  test_llm_factory.py  test_outfit_agent.py
backend/tests/api/: test_endpoints.py
backend/tests/tools/: test_cache_tools.py  test_http_tools.py
backend/tools/: call_weather_api.py  get_geocode.py  query_db.py  redis_client.py  save_db.py
docs/: prd-backend-hardening.md
docs/issues/: 01-config-dependency-hygiene.md  02-async-redis-cache-layer.md  03-async-http-tool-layer.md  04-async-llm-graph-singleton.md  05-api-endpoint-test-suite.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ChatWindow.vue  MessageBubble.vue  StatusBadge.vue
scriptsLibraries/: dev.ps1  rebuild.ps1  setup.ps1
