[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "langchain-anthropic>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.8",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "redis>=5.0.0",
    "uvicorn>=0.44.0",
]
